force-app/main/default/objects/returnLabelEvent__e/returnLabelEvent__e.object-meta.xml
<CustomObject>
    <label>returnLabelEvent</label>
    <pluralLabel>returnLabelEvents</pluralLabel>
</CustomObject>