force-app/main/default/objects/returnLabelEvent__e/fields/isVisible__c.field-meta.xml
<CustomField>
    <fullName>isVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isVisible</label>
    <type>Checkbox</type>
</CustomField>