force-app/main/default/objects/returnLabelEvent__e/fields/productId__c.field-meta.xml
<CustomField>
    <fullName>productId__c</fullName>
    <label>productId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>